[gd_scene load_steps=6 format=2]

[ext_resource path="res://guns/Quadratic.gd" type="Script" id=1]
[ext_resource path="res://font/romulus.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=2]
radius = 27.3991

[sub_resource type="Animation" id=3]
resource_name = "fire"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Barrel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 0.0 ]
}

[node name="Quadratic" type="Node2D"]
script = ExtResource( 1 )

[node name="Barrel" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Barrel"]
margin_left = -50.0497
margin_top = -24.3741
margin_right = 85.9503
margin_bottom = 24.6259
rect_min_size = Vector2( 100, 20 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.976471, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.737255, 0.482353, 0, 1 )
custom_constants/line_spacing = -7
text = "( xÂ²+3x+3 -"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 84.1849, 1.66855 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.45
one_shot = true

[node name="CaptureArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CaptureArea"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 3 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="area_entered" from="CaptureArea" to="." method="_on_CaptureArea_area_entered"]
